--- a/Makefile.uk
+++ b/Makefile.uk
@@ -10,7 +10,7 @@ APPELFLOADER_SRCS-$(CONFIG_APPELFLOADER_BRK) += $(APPELFLOADER_BASE)/syscalls/br
 UK_PROVIDED_SYSCALLS-$(CONFIG_APPELFLOADER_BRK) += brk-1
 
 APPELFLOADER_SRCS-$(CONFIG_APPELFLOADER_ARCH_PRCTL) += $(APPELFLOADER_BASE)/syscalls/arch_prctl.c
-UK_PROVIDED_SYSCALLS-$(CONFIG_APPELFLOADER_ARCH_PRCTL) += arch_prctl-3u
+UK_PROVIDED_SYSCALLS-$(CONFIG_APPELFLOADER_ARCH_PRCTL) += arch_prctl-3e
 
 APPELFLOADER_SRCS-$(CONFIG_APPELFLOADER_VDSO) += $(APPELFLOADER_BUILD)/vdso-image.c
 APPELFLOADER_SRCS-$(CONFIG_APPELFLOADER_VDSO) += $(APPELFLOADER_BASE)/vdso/vsyscall.c
